--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11",
+    "vue2-ace-editor": "^0.0.15",
     "webpack-bundle-analyzer": "^3.9.0"
   },
   "eslintConfig": {
