--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "vue-template-compiler": "^2.6.11",
     "vue2-ace-editor": "^0.0.15",
-    "webpack-bundle-analyzer": "^3.9.0"
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "eslintConfig": {
     "root": true,
